# electronics_retail_chain

./: README.md  manage.py  pyproject.toml
electronic/: asgi.py  settings.py  urls.py  wsgi.py
electronic_network/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
electronic_network/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
